# hesseflux

./: .coveragerc  .gitignore  .travis.yml  .zenodo.json  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: Makefile  requirements.txt
docs/html/: .buildinfo  api.html  argsort.html  ascii2ascii.html  authors.html  changelog.html  const.const.html  const.html  contents.html  date2dec.html  dec2date.html  division.html  esat.html  fgui.html  fread.html  fsread.html  functions.fit_functions.html  functions.general_functions.html  functions.html  functions.logistic_function.html  functions.opti_test_functions.html  functions.sa_test_functions.html  gapfill.html  genindex.html  index.html  install.html  logtools.html  logtools.logtools.html  mad.html  madspikes.html  nee2gpp.html  objects.inv  package.html  py-modindex.html  search.html  searchindex.js  sread.html  userguide.html  ustarfilter.html
docs/html/_modules/: index.html
docs/html/_sources/: api.rst.txt  argsort.rst.txt  ascii2ascii.rst.txt  const.const.rst.txt  contents.rst.txt  date2dec.rst.txt  dec2date.rst.txt  division.rst.txt  esat.rst.txt  fgui.rst.txt  fread.rst.txt  fsread.rst.txt  functions.fit_functions.rst.txt  functions.general_functions.rst.txt  functions.logistic_function.rst.txt  functions.opti_test_functions.rst.txt  functions.rst.txt  sread.rst.txt  (+6 more)
docs/source/: api.rst  argsort.rst  conf.py  const.const.rst  const.rst  contents.rst  date2dec.rst  dec2date.rst  division.rst  esat.rst  fgui.rst  fread.rst  fsread.rst  functions.fit_functions.rst  functions.general_functions.rst  functions.logistic_function.rst  functions.opti_test_functions.rst  functions.rst  functions.sa_test_functions.rst  index.rst  install.rst  logtools.logtools.rst  logtools.rst  mad.rst  nee2gpp.rst  package.rst  sread.rst  userguide.rst  ustarfilter.rst
example/: hesseflux_example.cfg  postproc_europe-fluxdata.py
hesseflux/: __init__.py  gapfill.py  madspikes.py  ustarfilter.py  version.py
src/hesseflux/: __init__.py  argsort.py  date2dec.py  dec2date.py  esat.py  fgui.py  gapfill.py  madspikes.py  nee2gpp.py  ustarfilter.py
tests/: requirements_test.txt  test_argsort.py  test_dummy.py  test_sa_test_functions.py
(+26 files in other folders)
