[metadata]
name = hesseflux
description = hesseflux: a Python library to process and post-process Eddy covariance data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/mcuntz/hesseflux
author = Matthias Cuntz
author_email = mc@macu.de
maintainer = Matthias Cuntz
maintainer_email = mc@macu.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development
    Topic :: Utilities
project_urls =
    Documentation = https://mcuntz.github.io/hesseflux/
    Source = https://github.com/mcuntz/hesseflux
    Tracker = https://github.com/mcuntz/hesseflux/issues
    Changelog = https://github.com/mcuntz/hesseflux/blob/master/CHANGELOG.rst
    # Conda-Forge = https://anaconda.org/conda-forge/hesseflux

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy
    scipy
    pandas
    pyjams
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests*
    docs*
    bin*
    example*

[options.extras_require]
doc =
    numpydoc>=1.1,<2
    jinja2>=2
    sphinx>=3,<4
    sphinx-rtd-theme>=0.5,<1
    seaborn
    pyarrow
test =
    coverage[toml]>=5.2.1,<6
    pytest>=6.0,<7
    pytest-cov>=2.11.0,<3
